# minimal-cmx-build

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  gen-hdr.sh
inc/: ucmsis.h
lib/: link.ld  memory.ld
src/: main.c  start.c  vectors_vendor.c
